Screen <320px no longer has history overflow cut at the bottom cut off

--- a/main.css
+++ b/main.css
@@ -323,14 +323,16 @@ footer{
 @media only screen and (max-width: 320px){
   section#calculator #display{
     width: 286px;
+    height: 60px;
   }
   section#calculator #display #history{
-    height: 18px;
+    height: 22px;
     font-size: 16px;
   }
   section#calculator #display #result{
     height: 36px;
     font-size: 24px;
+    padding-top: 0px;
   }
   section#calculator button{
     width: 64px;
